infra/k8s/base/merchant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merchant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: merchant-service
  template:
    metadata:
      labels:
        app: merchant-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: merchant-service
          image: poc-merchant-service:kind
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: merchant-service
spec:
  selector:
    app: merchant-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
